// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders correctly at end of page range 1`] = `
<DocumentFragment>
  <nav
    aria-label="Search results pages"
    class="custom-pagination container "
  >
    <div
      class="row justify-content-between align-items-center"
    >
      <div
        class="col-auto p-0"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          &lt; Back
        </button>
      </div>
      <div
        class="col-auto"
      >
        <ul>
          <li>
            <span
              class="btn"
              style="cursor: default;"
            >
              ...
            </span>
          </li>
          <li>
            <button
              class="btn btn-link"
              type="button"
            >
              9
            </button>
          </li>
          <li>
            <span
              class="btn"
              style="cursor: default;"
            >
              10
            </span>
          </li>
          <li
            class="invisible"
          />
          <li
            class="invisible"
          />
        </ul>
      </div>
      <div
        class="col-auto p-0"
      >
        <button
          class="btn btn-link invisible"
          type="button"
        >
          More &gt;
        </button>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Pagination renders correctly at start of page range 1`] = `
<DocumentFragment>
  <nav
    aria-label="Search results pages"
    class="custom-pagination container "
  >
    <div
      class="row justify-content-between align-items-center"
    >
      <div
        class="col-auto p-0"
      >
        <button
          class="btn btn-link invisible"
          type="button"
        >
          &lt; Back
        </button>
      </div>
      <div
        class="col-auto"
      >
        <ul>
          <li
            class="invisible"
          />
          <li
            class="invisible"
          />
          <li
            class="invisible"
          />
          <li>
            <span
              class="btn"
              style="cursor: default;"
            >
              1
            </span>
          </li>
          <li>
            <button
              class="btn btn-link"
              type="button"
            >
              2
            </button>
          </li>
          <li>
            <button
              class="btn btn-link"
              type="button"
            >
              3
            </button>
          </li>
          <li>
            <span
              class="btn"
              style="cursor: default;"
            >
              ...
            </span>
          </li>
        </ul>
      </div>
      <div
        class="col-auto p-0"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          More &gt;
        </button>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Pagination renders correctly for whole page range 1`] = `
<DocumentFragment>
  <nav
    aria-label="Search results pages"
    class="custom-pagination container "
  >
    <div
      class="row justify-content-between align-items-center"
    >
      <div
        class="col-auto p-0"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          &lt; Back
        </button>
      </div>
      <div
        class="col-auto"
      >
        <ul>
          <li
            class="invisible"
          />
          <li
            class="invisible"
          />
          <li>
            <button
              class="btn btn-link"
              type="button"
            >
              1
            </button>
          </li>
          <li>
            <span
              class="btn"
              style="cursor: default;"
            >
              2
            </span>
          </li>
          <li>
            <button
              class="btn btn-link"
              type="button"
            >
              3
            </button>
          </li>
          <li>
            <button
              class="btn btn-link"
              type="button"
            >
              4
            </button>
          </li>
          <li
            class="invisible"
          />
        </ul>
      </div>
      <div
        class="col-auto p-0"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          More &gt;
        </button>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Pagination renders correctly in middle of page range 1`] = `
<DocumentFragment>
  <nav
    aria-label="Search results pages"
    class="custom-pagination container "
  >
    <div
      class="row justify-content-between align-items-center"
    >
      <div
        class="col-auto p-0"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          &lt; Back
        </button>
      </div>
      <div
        class="col-auto"
      >
        <ul>
          <li>
            <span
              class="btn"
              style="cursor: default;"
            >
              ...
            </span>
          </li>
          <li>
            <button
              class="btn btn-link"
              type="button"
            >
              3
            </button>
          </li>
          <li>
            <button
              class="btn btn-link"
              type="button"
            >
              4
            </button>
          </li>
          <li>
            <span
              class="btn"
              style="cursor: default;"
            >
              5
            </span>
          </li>
          <li>
            <button
              class="btn btn-link"
              type="button"
            >
              6
            </button>
          </li>
          <li>
            <button
              class="btn btn-link"
              type="button"
            >
              7
            </button>
          </li>
          <li>
            <span
              class="btn"
              style="cursor: default;"
            >
              ...
            </span>
          </li>
        </ul>
      </div>
      <div
        class="col-auto p-0"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          More &gt;
        </button>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
